full-read through complete, edits added to introduction

--- a/chap1.tex
+++ b/chap1.tex
@@ -842,7 +842,7 @@ his creations, notably Talos, a golden female automaton, come to us
 from antiquity \cite[Ch. 1]{mccorduck}, but continue to be cited as
 historical antecedents in 
 literature on autonomous robots and their ethical issues \cite[p.
-  3]{patricklin}. Automata, 
+  3]{patrickLin}. Automata, 
 or rather semblances of automata, appear in Hellenic Egypt, with
 priests as puppeteers pulling their strings \cite[Ch. 1]{mccorduck}. The history of
 artificial life is intertwined with that of autonomous machines: the
@@ -1676,7 +1676,7 @@ preconceptions about the value of level 5 autonomy and the
 intermediate stages by which it will be achieved. The SAE's taxonomy
 is part of a long tradition of levels of automation formulations in
 engineering that make these kinds of implicit assumptions in various
-ways \cite{ParasuramanW} \cite{PSWickens} \cite{ALFUS} \cite{SMART}. Their
+ways \cite{parasuramanW} \cite{PSWickens} \cite{ALFUS} \cite{SMART}. Their
 greater facility with the technologies involved seems likely to have
 contributed to their ability to achieve a somewhat more nuanced view
 of vehicle automation than the NHTSA. The
