--- a/chap2.tex
+++ b/chap2.tex
@@ -1,4 +1,4 @@
-\chapter{The Stakes of our Stories}
+\chapter{The Stakes of Our Stories}
 \label{chap:2}
 
 %% 3. Stakes of stories/tech (swap 4?)
@@ -941,10 +941,9 @@ complicated technological systems.
 %%ETHICS
 Robot ethics is an issue of growing importance to society at
 large---given the rapidly-expanding uses of robotics for labor, military,
-research, entertainment, and healthcare, among other regimes \cite[p.
-  5-6]{patrickLin}---but we should be very clear what we mean when we
+research, entertainment, and healthcare, among other regimes \cite[p. 5-6]{patrickLin}---but we should be very clear what we mean when we
 discuss it. Lin, Abney, and Bekey's collection is wide-ranging,
-considering perspectives including safety and errors (how should
+considering perspectives including safety and errors (how should 
 robots be introduced in order to minimize adverse effects?), law and
 responsibility (when accidents happen, who is liable?), ethical codes
 (how, and with what ethical frameworks, can robots be programmed to
