--- a/concl.tex
+++ b/concl.tex
@@ -424,7 +424,9 @@ directing three or four or five cars through the roads of London where
 they are driverless cars with a human controlling the GPS''
 \cite{forbesDawson}.
 Whether the appropriate number is 5 or 5000 cars, this vision seems
-plausible, and bears similarities to current Predator UAV operations.}
+plausible, and bears similarities to current Predator UAV operations.
+It also sounds quite a bit like GM's `Autoline' concept from 1964,
+mentioned in the introduction.}
 
 %%TODO (DONE): 
 %%Kabbee gets the supervised idea!
