--- a/cover.tex
+++ b/cover.tex
@@ -59,16 +59,18 @@ Automated Car}
 %Self-Driving Dreams: Narratives, Ideologies, and the Shape of the
 %Automated Car
 
+% Asleep at the Wheel: Dangerous Fantasies of a Driverless Future
 
 
-\author{Erik Stayton}
+
+\author{Erik Lee Stayton}
 % If you wish to list your previous degrees on the cover page, use the 
 % previous degrees command:
        \prevdegrees{Sc.B., Brown University (2007)}
 % You can use the \\ command to list multiple previous degrees
 %       \prevdegrees{B.S., University of California (1978) \\
 %                    S.M., Massachusetts Institute of Technology (1981)}
-\department{Comparative Media Studies}
+\department{Program in Comparative Media Studies/Writing}
 
 % If the thesis is for two degrees simultaneously, list them both
 % separated by \and like this:
@@ -79,7 +81,7 @@ Automated Car}
 % February, or June.  The default is June.
 \degreemonth{June}
 \degreeyear{2015}
-\thesisdate{May 18, 2015}
+\thesisdate{May 8, 2015}
 
 %% By default, the thesis will be copyrighted to MIT.  If you need to copyright
 %% the thesis to yourself, just specify the `vi' documentclass option.  If for
@@ -144,7 +146,7 @@ Any substantial work of writing has a long gestation period, and this
 has been no exception. A great number of people come to mind who have
 contributed to the existence of this thesis over the last 20 months,
 but I fear I must 
-inevitably leave some out:  (\emph{mea maxima culpa}). 
+inevitably leave some out. To them I can say only \emph{mea maxima culpa}. 
 
 No master's thesis is complete without a
 solid advising team, and my most heartfelt thanks go to T. L. Taylor
@@ -158,7 +160,13 @@ much as possible, interrogate the technical objects themselves),
 William Uricchio (who has challenged my terminological precision),
 Heather Hendershot (who has kept my eye on science fiction) have all
 been indispensable in their own ways, and have given freely of both
-thesis and career advice.
+thesis and career advice. Discussions with Kate Crawford, Nick Seaver,
+Tarleton Gillespie, Merritt Roe Smith, Stefan Helmreich, and G\"{o}de Both have also
+shaped this work and made it what it is; as have innumerable
+discussions at conferences. Conversations with a number of informants
+(including Ryan Chin, Jim Womack, and John Leonard)
+furnished important material, and though I cannot list all of them by
+name, I wish to thank them all for giving of their time.
 
 All of my classmates, in the classes of 2014, 2015 and 2016 have been great
 friends, supporters, and sounding boards for ideas. But I fear I must
@@ -170,14 +178,16 @@ Gonzalez, Kyrie Caldwell, and Lacey Lord for being available for
 games and gripe sessions throughout the process. On that note, my old
 friend Kristin Bergman, and my new friend Andrea Morales Coto, have
 been invaluable companions on this adventure, providing much needed
-levity and perspective in trying times.
+levity and perspective in trying times. I also thank my forthcoming
+classmates at MIT HASTS for their input and encouragement,
+particularly Alison Laurence and Clare Kim.
 
 My parents, Barbara Mindell and Lee Stayton, have often been the first
 to hear my ideas, and have provided irreplaceable editing and feedback
 on this and other projects during my two years at MIT. I am so pleased
 to have been able to share this work with you, and both it, and I,
 have profited immensely from your input and your presence. Abigail
-Strait, whose food, hospitality, and endless supply of tea I have
+Strait, whose food, hospitality, and seemingly endless supply of tea I have
 partaken of innumerable (at least more than twenty!) times during the
 writing of this thesis, you will always have my gratitude.
 
@@ -186,7 +196,7 @@ drive to re-envision the future of humanity has spurred me on: this
 project exists in no small part due to his influence, and he most of
 all deserves thanks. As we have 
 often said, this was supposed to be the Fourth Great and Bountiful
-Human Empire. Let us make it so.
+Human Empire. Let us strive make it so.
 
  
 
