--- a/intro.tex
+++ b/intro.tex
@@ -7,8 +7,8 @@
 
 It is early August, 1925, and a strange spectacle greets viewers on
 Broadway in New York City. An empty car lurches uncertainly down the
-street,\footnote{This description is adapted from Time
-  Magazine \cite{ScienceRadio}.} followed closely behind by a
+street,\footnote{This description is adapted from \emph{Time
+ Magazine} \cite{ScienceRadio}.} followed closely behind by a
 chase car, filled with radio equipment and several men, one driving,
 and one furiously operating a set of controls. The lead car features a
 diamond-shaped antenna sprouting from where the back seat should be,
@@ -27,11 +27,11 @@ new idea, specifically enabled by recent advances in artificial
 intelligence, they have not merely been dreamed about, but actually
 built in prototype form, as far back as 1925, when Houdina Radio Control
 built the ``Linrrican Wonder'' from a 1926 Chandler, and demonstrated
-it live, on the streets of New York City. But it would be wrong to
+it live on the streets of New York City. But it would be wrong to
 characterize a 90-year engineering journey as the continual
 progression toward a ``modern,'' developed device. There is nothing
 fundamentally natural about the way automated---or, often interchangeably
-``autonomous,n'' ``driverless,'' or ``self-driving''\footnote{I indeed use these terms
+``autonomous,'' ``driverless,'' or ``self-driving''\footnote{I indeed use these terms
   interchangeably at times even within this text, but I should mention
 the specifics of their use here. Autonomous, driverless, and self-driving
 vehicles are generally one and the same, though the terms
@@ -55,11 +55,11 @@ development, and alter how developments are represented and discussed
 in popular media. What we believe self-driving cars to be---or what we
 believe they soon will be---is a product of the popular, teleological understanding
 of technology development, which draws from existing technocratic
-impulses and narratives\footnote{These narratives are deeply, though
+impulses and narratives.\footnote{These narratives are deeply, though
   not exclusively, American, and are intertwined with stories of
   American technological progress over the last century, from the
   Manhattan Project to the Apollo Program to ARPAnet to IBM's
-  Watson.}. However, alternative narratives exist, and 
+  Watson.} However, alternative narratives exist, and 
 are very influential among certain groups of automation researchers,
 but deserve much broader recognition outside of these circles. In
 order to understand the way that automated vehicles have been figured
@@ -80,18 +80,20 @@ Furthermore, technological visions and concepts inscribe excitement about the
 technologies of the present moment, and this tendency has deeply
 affected the history of automated vehicle research. From the railroad to the
 Internet (passing through the telegraph, the airship, electrification,
-television, thpe automobile, the rocket), each new mode of
+television, the automobile, the rocket), each new mode of
 communication (or transportation\footnote{Rudolf Arnheim referred to
   TV, a ``relative of motorcar and airplane,'' as a ``means of
-  cultural transportation'' \cite[p. 194]{arnheim}}) ushers in new visions of our
-collective future. We are famously bad at these predictions \cite{vanriper} but they
+  cultural transportation'' \cite[p. 194]{arnheim}.}) ushers in new visions of our
+collective future. We are famously bad at these predictions \cite{vanriper}, but they
 nevertheless drive the popular imaginary, which has included automated
 vehicles since the 1920s, and other types of automation for hundreds
-of years previous\footnote{For more on this, see chapter
-  \ref{chap:1}.}. Both visions of and research on self-driving
+of years previous.\footnote{For more on this, see chapter
+  \ref{chap:1}.} Both visions of and research on self-driving
 technology have taken on aspects of the central information
 technologies of their day, and re-inscribed them as control
-technologies for physical devices.
+technologies for physical devices. The history of our driverless
+dreams shows that the form of automated vehicles has been neither
+constant nor a foregone conclusion.
 
 \subsection{Early Work}
 
@@ -111,8 +113,8 @@ Contemporary news articles describe the machine as if it drove itself,
 as if the physical position of the person was what mattered, not the
 fact that a human was always using the radio transmitter:  ``Driverless,
 it will start its own motor, throw in its clutch, twist its steering
-wheel, toot its horn, and it may even 'sass' the policeman at the
-corner'' \cite{phantomAuto}. Described as``one of the most amazing products of
+wheel, toot its horn, and it may even `sass' the policeman at the
+corner'' \cite{phantomAuto}. Described as ``one of the most amazing products of
 modern science,'' the 
 car proceeds ``as though there were an invisible driver at the wheel''
 in an effect both ``uncanny and mystifying''\cite{phantomAuto2}. Such work,
@@ -176,8 +178,8 @@ device operating via radio control.
 
 But radio was not the only revolutionary medium to be included in
  portrayals of the self-driving car of the future. The cover of the
- April 1936 \cite{modernmechanix} edition of the magazine \emph{Modern
-   Mechanix} betrays a 
+ April 1936 edition of the magazine \emph{Modern
+   Mechanix} \cite{modernmechanix} betrays a 
  different vision of the autonomous vehicle: the so-called ``electric
  eye automobile'' which would steer itself via a control loop, using an
  array of ``electric eyes,'' or photocells, on the car to track a light
@@ -203,8 +205,9 @@ The cover pictures an intrepid ``driver'' using a camera to take a
 \cite[p. 71]{lightbeams}.
 Responsible for initially putting the car into motion, the driver can
 then step back from the task of driving, allowing the electrical
-controls of mechanical linkages within the car---meticulously diagrammed
-within the magazine article---to convey him safely and speedily down
+controls of mechanical linkages within the car---meticulously, if only
+artistically, diagrammed
+within the magazine article---to convey him or her safely and speedily down
 the track. The photocells within the vehicle's sensing mechanism would
 operate relays controlling the steering linkage, closing the loop
 between sensing and acting in the manner of a ``teleological''
@@ -223,10 +226,10 @@ Daily Tribune}, April 25, 1959, in a speech he gave at Northwestern
 University, taking seriously the idea of autonomous cars. The article,
 titled ``In 50 Years: Cars Flying Like Missiles!'' asks readers: ``Can
 you imagine flying automobiles directed by automatic guidance
-systems?''\cite{tribuneViaPaleo}. Author Matt Novak\footnote{Novak writes the
- blog Paleofuture, once on the Smithsonian website, now on Gizmodo,
+systems?'' \cite{tribuneViaPaleo}. Matt Novak\footnote{Novak writes the
+ blog Paleofuture, once on the \emph{Smithsonian} website, now on \emph{Gizmodo},
  about past visions of the future.} suggests that ``Arthur Radebaugh's syndicated
-Sunday comic 'Closer Than We Think' was also a likely inspiration''
+Sunday comic `Closer Than We Think' was also a likely inspiration''
 for contemporary images of advanced car technologies---in this case
 the vision of flying cars shown in \emph{The Jetsons} in 1962, a
 dream related to, but still distinct from, the driverless dream---as in
@@ -238,7 +241,7 @@ year also describe a 3-foot-long model of Kucher's ``Glideair'' that was
 demonstrated to reporters in Detroit \cite{novakFlying}. The car may
 not be driverless, 
 but the people depicted riding in the ``flying carpet car'' in
-Radebaugh's illustration don't seem to be paying much attention to
+Radebaugh's illustration do not seem to be paying much attention to
 where it is going, and the road surface is bordered with ridges that
 visually suggest the idea that the car will keep itself within the
 demarcated space.
@@ -253,9 +256,9 @@ landscape, tamed and controlled, yet retains its natural beauty:
 nowhere to be seen are smokestacks and the power plants generating the
 guiding force of these vehicles. Instead, we see the rural, even
 pastoral, landscape largely unbesmirched, only cut across by the
-rationalization of a futuristic interstate highway system\footnote{Recall that
+rationalization of a futuristic interstate highway system.\footnote{Recall that
 the Federal Aid Highway Act of 1956 began the creation of the
-interstate system as we have it today.}. Within the finned, bubble
+interstate system as we have it today.} Within the finned, bubble
 canopied auto sits a nuclear family---father,
 mother, daughter, and son---enjoying family time, a game of dominoes.
 Perfectly coiffed, snappily dressed, and totally at ease, the mother
@@ -277,7 +280,7 @@ present into an equally conservative future.
 
 If electricity was still the force that would be harnessed to make the
 roadways safe, what were the ``mechanical equivalents of sense
-organs'' \cite{wienerMachineThreat}for the driverless car? New
+organs'' \cite{wienerMachineThreat} for the driverless car? New
 wartime and postwar developments in electronics, the same ones that
 inspired new science fiction visions of the future, drove actual
 research in automated vehicle systems. In the early 1950s, General
@@ -290,7 +293,7 @@ Firebird II ``had no automated capabilities whatsoever'' \cite[p. 7]{wetmore}. G
 promotional films suggested the vehicle could be controlled
 electronically from traffic control towers---like those in use in
 aviation---placed along major highways: the car was ``under the direction
-of an 'electronic brain' on a dream highway of the future'' \cite[p.
+of an `electronic brain' on a dream highway of the future'' \cite[p.
   7]{wetmore}. This 
 would have been the realization of the New York World's Fair exhibit
 from two decades earlier. Building to make
@@ -333,10 +336,14 @@ The 1964 New York World's Fair hosted a second Futurama exhibit, in
 which GM presented an automated highway system much like Zworykin's
 system next to multitudinous nuclear-powered concepts. The exhibit was
 thus described: 
-\begin{quote}A revolutionary 'Autoline' expands the capacity of a three-lane
+\begin{quote}A revolutionary `Autoline' expands the capacity of a three-lane
 expressway: Electronically, a control-tower operator steers, brakes
 and sets the speed of each car in an automatic lane; groups of cars
-move at equal intervals as a group \cite[p. 9]{wetmore}.\end{quote}
+move at equal intervals as a group \cite[p. 9]{wetmore}.\footnote{This
+idea may seem quaint, but actually represents an important operations
+paradigm that is the focus of the last two chapters of this thesis.
+Public proposals to this effect are rare, but the concept remains
+vitally important.}\end{quote}
  Advances in
 electronics, and the expansion of early control theory into
 cybernetics through the work of Norbert Wiener (who gave numerous
@@ -397,8 +404,8 @@ video signals to detect lanes and other vehicles \cite[p.
   2]{ulmerVITA-II}. Additional sensors 
 detected brake pressure, temperature, steering angle, acceleration in
 lateral and longitudinal directions, and yaw \cite[p.
-  2]{ulmerVITA-II}. The camera systems used 
-applied two-camera setups with stabilized two-axis rotation to allow
+  2]{ulmerVITA-II}. The camera systems
+utilized two-camera setups with stabilized two-axis rotation to allow
 them to follow objects of interest in the scene \cite{cameraPlatform}. And the
 technology largely worked, with the PROMETHEUS project coming to a
 successful conclusion in 1994 and 1995 with 1000 kilometers of largely
@@ -409,8 +416,7 @@ Congress passed the Intermodal
 Surface Transportation Efficiency Act in 1991, which allowed for \$650 million
 in funding for driverless vehicle research over the following six
 years
-\cite{novakAlmost}.\footnote{Novak
-of the \emph{Smithsonian} blog suggests that the biggest problem with
+\cite{novakAlmost}.\footnote{Novak suggests that the biggest problem with
 the legislation was that it failed to define what a ``fully automated
 highway system'' would be, such that it could be achieved in the time
 allotted \cite{novakAlmost}. This is an important consideration for
@@ -445,7 +451,7 @@ real-world road environments,\footnote{These vehicles basically
   though hostile in many ways, is not nearly so complex as an urban or
 suburban road. The navigational approaches applied there are
 fundamentally different than those necessary for an every-day
-self-driving vehicle.} but the Urban Challenge
+self-driving vehicle.} the Urban Challenge
 vehicles, both via their sensor setups and algorithmic approaches to
 navigation, can be interpreted as another step along the path to the
 modern self-driving car, as instantiated within Google's design approach. 
@@ -455,7 +461,7 @@ headlines with its self-driving vehicle research, and is defining the
 look of the autonomous car with its roof mounted LIDAR scanner, other
 companies are developing vehicles with slightly different sensors and
 techniques. Google's approach uses cameras and the rotating laser
-scanner, along with detailed pre-mapping and highly-accurate
+scanner, along with detailed pre-mapping and highly accurate
 differential GPS \cite{guizzoHow}. Mercedes, so far, focuses more on
 cameras and radar, 
 without using expensive LIDAR systems or requiring exquisitely
@@ -464,12 +470,16 @@ already seen in the new S-class luxury sedan, though these vehicles
 have not yet reached the level of capability of Mercedes's ``Bertha''
 test vehicle \cite{makingBertha}. But these sensing choices come with their own
 trade-offs in terms of operations, safety, and how safety can be
-determined and proven. Even Apple claims, as of the time of writing,
+determined and proven. Even Apple seems, as of the time of writing,
 to be working on an autonomous vehicle, though its approach has not
-yet been made public. Tesla Motors is also working on an iterated
+yet been made public \cite{taylorApple}.\footnote{Notwithstanding an
+  unnammed industry source, there is some
+  speculation that observed Apple-registered vehicles are a publicity stunt or part of
+  a mapping exercise instead \cite{bonningtonCurious}.} Tesla Motors
+is also working on an iterated 
 approach to vehicle autonomy, focusing publicly on software updates to
 existing cars that add new automated features. Volvo is both involved
-in a public test of vehicle autonomy in Sweden, and is moving forward
+in a public test of vehicle autonomy in Sweden \cite{volvoPR}, and is moving forward
 with automated systems in its production cars, building from years of
 research in Advanced Driver Assistance Systems (ADAS) and Advanced
 Vehicle Control Systems (AVCS). It is important to recognize that
@@ -478,13 +488,13 @@ improvements on current designs to radical approaches that attempt to
 achieve full self-driving at once. Automated\footnote{I use ``automated''
   precisely here. It is one of the main failures of the
   ``self-driving'' term that it appears to make a clear distinction: 
-  either something can drive itself or it cannot. But there are even
-  levels here: Under what circumstances can it be self-driving? Is
+  either something can drive itself or it cannot. But there are
+  levels even here: Under what circumstances can it be self-driving? Is
   complete self-driving capability necessary before the term applies?
   These questions will return again and again through this thesis,
   especially in chapters \ref{chap:1} and \ref{chap:3}. }---or even
 ``self-driving''---vehicles are not just one, uniform type of
-thing. And, critically, there is no clear
+device. And, critically, there is no clear
 line to be drawn between their extremes, as we will see in chapter
 \ref{chap:3}. 
 
@@ -505,7 +515,7 @@ line to be drawn between their extremes, as we will see in chapter
 %% DO include the CES depictions; and contrast with the 1950s ad, at
 %% least in a footnote!
 One would be excused, however, for thinking differently. The popular
-portrayal of self-driving technology is not often very nuanced. While
+portrayal of self-driving technology is often lacking in nuance. While
 there is a fair amount of popular argument about whether these
 vehicles will be beneficial (or how beneficial they will be) along
 various axes of interest, there is relatively little discussion of
@@ -522,11 +532,12 @@ and concepts at CES worked glitz and glamour into the dream of a
 driverless future. Mercedes-Benz's F015 autonomous car
 concept forgoes the traditional seating arrangement in favor of
 rotating chairs that turn the center of the car into a lounge or
-meeting space \cite{riofrioMB}. The car's side windows are relatively minimal, its
+meeting space (like the seating arrangement from the 1950s
+\emph{Saturday Evening Post} ad) \cite{riofrioMB}. The car's side windows are relatively minimal, its
 doors taken up primarily by touch screens. In fact, the interior is
 covered in touchable displays, set up for an immersive digital
 experience. But beneath this shiny media exterior sits a relatively
-unglamorous purpose:  its publicity photos show serious-looking, young white
+unglamorous purpose:  its publicity photos show serious-looking, young, white
 businesspeople in uniform grey work clothing \cite{simpsonDesign}. The environment is
 high tech and sharply clinical. Far from an exuberant depiction of the
 promise of media technology in the automobile, this future is so
@@ -543,7 +554,7 @@ optimistic and pessimistic viewpoints.
 
 One popular vision of this technology is fundamentally optimistic: it
 puts forward the
-idea that these vehicles will be commercially available in as little
+idea that self-driving vehicles will be commercially available in as little
 as five years, and that in just two decades the majority of cars on the road will be
 fully autonomous. Even respected business-information and consulting
 bodies have bought into this dream.\footnote{For example, the IHS
@@ -558,7 +569,7 @@ ceding their driving agency to a computer system, especially on such a
 potentially short timescale \cite{clytton}. Google's Chris Urmson is
 still claiming that self-driving cars will be available in 5 years (a
 claim first made in August, 2014, a personal goal based on when his
-eldest son can get his license\cite{gomesObstacles}.), and expects
+eldest son can get his license \cite{gomesObstacles}), and expects
 these vehicles not to have steering wheels or the possibility of human
 control. That these vehicles would operate on public roadways is not
 stated explicitly---and seems optimistic given the speed of regulation
@@ -577,12 +588,12 @@ least popular ideas about it---and Chrysler's early ``Auto Pilot''
 cruise-control system, from the late 1950s
 \cite{kesslerElon}.
 Though Tesla is clear that human involvement and judgment will be
-required at first, Musk expects
+required at first, Musk suggests 
 that once sufficiently capable vehicles 
 come to market, human drivers may be
 outlawed \cite{kingGoogle}.
 In this vision, the technology is ready, or almost ready, and law and policy need to
-adapt. ``Robots can already outdrive humans,'' this view says, ``now
+adapt. ``Robots can already outdrive humans,'' the optimistic view says, ``now
 everyone needs to get out of the way''
 \cite{fisherInside}.
 
@@ -593,11 +604,11 @@ everyone needs to get out of the way''
 %% ---but this is a flawed picture of the future, and an incomplete
 %% picture of the tech
 
-However, another common viewpoint is that there are major problems remaining to be
-solved, and that the technology is not yet ready for
+However, another common viewpoint is that major problems remain to be
+solved, and that fully automated vehicle technology is not yet ready for
 commercialization, whatever Urmson and Google 
-say. Questions of safety, legality, and insurance cast doubts on this
-sort of optimistic timescale. Moral and ethical
+say. Questions of safety, legality, and insurance cast doubts on the
+optimistic timescale. Moral and ethical
 quandaries---driverless car ``trolley problems''---question how
 autonomous machines will respond to unusual situations and whether
 people will accept those responses. Would American freedom-rhetoric
@@ -605,22 +616,23 @@ allow the outlawing of human drivers \cite{badgerElon}?
 Perhaps not. Would we accept a computerized device that kills ``3,300
 Americans'' per year, but replaces the ``roughly 33,000 lives a year
 that perish on U.S. roads as a result of human
-error''\cite{mcfarlandDriverless}?
+error'' \cite{mcfarlandDriverless}?
 This is a difficult empirical question about the propensity of people
 to want to have a recognizable site for blame, and the tolerance of
 human beings for computer error. Among others, Bill Gurley, an Uber
 investor interviewed because of his connection to companies engaged in
-driverless vehicle research, believes that the reliability requirement
-for these systems---''four nines,'' as he describes it---given the
-catastrophic potential for errors renders the technology ``a long way
-off''\cite{shontellTop}.
+driverless vehicle research, believes that given the
+catastrophic potential for errors, the reliability requirement
+for these systems---''four nines,'' as he describes it---renders the
+technology ``a long way 
+off'' \cite{shontellTop}.
 Even statements from very respected autonomy researchers are used to
 support this view: John Leonard, notable as one of the researchers who
 worked on MIT's entrant to the DARPA Urban Challenge in 2007, has gone
 on the record multiple times about his doubts, and has become a very
 public face for driverless car skepticism \cite{ramseyWhen} \cite{gomesCircles}.
 
-From all this, one would be excused for thinking this was just an
+From all this, one might be excused for thinking this was simply an
 argument between the technophiles and the naysayers, the daring dreamers versus the
 conservative pragmatists. But there is much more to the story than is
 apparent in this simplistic narrative. Both popular visions of this
@@ -636,7 +648,7 @@ or illustrate its problems, without challenging that fundamental
 picture. The idea that ``if you are asked to take control, we've
 failed'' has become deeply ingrained in our development
 culture, more than just as a risk-mitigation strategy but as a guiding
-ideology But as we will see, this view does not necessarily hold together given
+ideology. But as we will see, this view does not hold together given
 historical examples.
 
 %---The future doesn't look like we think it does, pull material from
@@ -646,7 +658,7 @@ historical examples.
 %%TODO (DONE) consider: ; or even to some extent ontological position of a
 %%self-driving car that ``knows'' nothing 
 
-However, the nature of the self-driving car as it will appear in
+The nature of the self-driving car as it will appear in
 the near future is not self-evident, no matter how loud Google's voice
 or how large their investment. These technologies and visions of them
 enact certain ideologically charged activities---such as supporting
@@ -654,7 +666,8 @@ particular research agendas---and these can be traced through the
 histories and current discourses of the fields involved.
 The particular epistemologies of the research fields that contribute
 to this vision greatly affect what is considered, and valued, and
-pushed forward. And recognizing the ideological charges behind this
+pushed forward. And recognizing the ideological charges behind
+self-driving vehicle 
 work, and examining alternatives, might lead us to expect a very
 different technology with very
 different social and cultural impacts. 
@@ -670,14 +683,14 @@ different social and cultural impacts.
 \section{Overview}
 
 This thesis is organized around several key questions. First, what are
-the dominant narratives around self-driving vehicles and where do they
-come from? Within the introduction, and chapter \ref{chap:1}, I
-examine both the media's representation of self-driving vehicles and
+the dominant narratives of self-driving vehicles and where do they
+come from? In chapter \ref{chap:1}, I continue examining
+the media's representation of self-driving vehicles and
 the sources of the idea, common both among the media and among
 self-driving vehicle researchers, that complete vehicle autonomy is
 the only future vision worth discussing and investigating. Second,
 what are the stakes of telling this kind of story? In chapter
-\ref{chap:2} I describe some of the technologies involved in
+\ref{chap:2}, I describe some of the technologies involved in
 automation, and the fields with which visions of full automation are
 intertwined: computer vision, urban planning, machine ethics, and
 others. Taking the popular narrative at face value presents the
@@ -688,7 +701,7 @@ alone, solve any social problems. Successfully addressing social
 issues requires careful design at a whole-system level, involving
 people, vehicles, and infrastructure. Third, what other potential
 narratives for automation,
-particularly vehicle automation, exist? In chapter \ref{chap:3} I
+particularly vehicle automation, exist? In chapter \ref{chap:3}, I
 examine an alternative paradigm for thinking about automation, looking
 both at some of the literature in the field of human supervisory
 control, and historical examples from other regimes of automation that
@@ -711,7 +724,7 @@ productive ways. This appreciation allows us to shift the fundamental
 questions we ask about technology in a way that is, hopefully,
 productive for research and policy-making.
 
-I set out to critically examine the cultural and social
+I originally set out to critically examine the cultural and social
 implications of self-driving vehicle technology. In my na\"{\i}vet\'{e}, I
 conceived of driverless cars as just-another-AI-technology, something
 understood and on which a meaningful ideological critique could be
@@ -719,7 +732,7 @@ based. But as I researched, I discovered that not only did
 self-driving cars lack a fixed social meaning---their uses and
 contexts still up for grabs---but the technology itself is unspecified
 in profound and important ways. In an apt lesson for an early researcher,
-here was a thing which had not reached the stage of becoming, in
+here was a thing that had not reached the stage of becoming, in
 Latour's parlance, a ``black box,'' despite the media's treatment of
 it as such \cite{LatourScience}. Below the surface, controversy
 bubbles. The deeper one 
@@ -737,14 +750,14 @@ should think about new technologies, I am unwilling to drop them
 entirely. So what follows is a patchwork, though, I hope, an artful
 one.} Different technological possibilities produce several visions of
 what society might be, but each will ultimately have to come into
-contest not only with physical reality, but the social realms of law,
+contact not only with physical reality, but the social realms of law,
 technology, and public acceptance. Rather than taking the visions as
 my starting point, I have had to dig deeper: putting these visions in the context of
 historical fields and precedents, and shining light through their
 gaps. And that is what I hope this project has become, a 
 deep look into the ideologies and rhetorics of the self-driving car,
 one which hints at what society might be like once these
-vehicles are common, but moreso investigates what different models for these vehicles
+vehicles are common, but more so investigates what different models for these vehicles
 exist, and what their public face might be if different people wrote,
 and different ideas guided, their stories.
 
