--- a/main.bib
+++ b/main.bib
@@ -2032,7 +2032,32 @@
    year = "2014",
 }
 
+@ARTICLE{taylorApple,
+   author = "Edward Taylor and Alexei Oreskovic",
+   title = "{A}pple studies self-driving car, auto industry source says",
+   journal = "Reuters",
+   month = "February 14",
+   year = "2015",
+   note = "http://www.reuters.com/article/2015/02/14/us-apple-autos-idUSKBN0LI0IJ20150214",
+}
 
+@ARTICLE{bonningtonCurious,
+   author = "Christina Bonnington",
+   title = "{T}he {C}urious {C}ase of {A}pple's {S}upposed {S}elf-{D}riving {C}ar",
+   journal = "Wired",
+   month = "February 06",
+   year = "2015",
+   note = "http://www.wired.com/2015/02/apple-self-driving-car/",
+}
+
+@ARTICLE{volvoPR,
+   author = "{Volvo Cars}",
+   title = "{V}olvo {C}ar {G}roup's first self-driving {A}utopilot cars test on public roads around {G}othenburg",
+   journal = "Volvo Cars of North America Newsroom",
+   month = "April 29",
+   year = "2014",
+   note = "https://www.media.volvocars.com/us/en-us/media/pressreleases/145619/volvo-car-groups-first-self-driving-autopilot-cars-test-on-public-roads-around-gothenburg",
+}
 
 
 
